Refatorar e aprimorar a configuração da aplicação e a interface do usuário;
Refatorar components para funcionar com AppModule;

Criar todos services http utilizando OpenAPI

Criar services: TokenService e AuthGuard

Criar Interceptor http para os token

Ajustar rotas do AppModuleRouting e BookModuleRouting

Corrigir erros do back e do front.

Criar estilos css para cada component.

Criar e implementar as funçoes de cada component:
- Main,Menu, BorroredBook, ManageBook,BookCard,BookList,Rating,ReturnedBook

refatorar o que era necessario.